# cargo-features = ["profile-rustflags"]
[package]
name = "jaggedarray"
version = "0.2.0"
edition = "2021"
description = "Multidimensional jagged array"
license = "MIT"
keywords = ["jagged_array", "data_structure", "array", "contiguous_buffer"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
categories = ["data-structures"]
[dependencies]
typenum = "1.17.0"
generic-array = "1.0.0"
num = "0.4.3"
tinyvec = "1.6.0"
[profile.bench]
opt-level = 3
lto = true
strip = "symbols"
# rustflags = ["-C", "target-cpu=native"]
[profile.release]
opt-level = 3
lto = true
debug = true
# rustflags = ["-C", "target-cpu=native"]
[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
[[bench]]
name = "my_benchmark"
harness = false
